Fixed overflow issues on profile page, and added profile edit function to admin page (not dashboard)

--- a/css/admin.css
+++ b/css/admin.css
@@ -41,7 +41,12 @@ h1{
 
 #profileForm{
     display: grid;
-    grid-template-rows: 18% 7% 12% 12% 12% 12% 12% 15%;
+    grid-template-rows: 18% 7% 10% 10% 10% 10% 10% 10% 10%;
+}
+
+#msg{
+    align-self: center;
+    justify-self: center;
 }
 
 #profilePhoto{
@@ -55,6 +60,7 @@ h1{
 #profileInfo > p, label{
     font-size: 3vmin;
     margin: 0;
+    align-self: center;
 }
 
 label > input{
@@ -88,10 +94,6 @@ label > input::placeholder{
     color: white;
     text-decoration: none;
     display: inline;
-}
-
-#editButton:hover{
-    background-color: rgb(218, 134, 0);
 }
 
 #uploadButton{
